[package]
name = "stamp-core"
version = "0.1.0"
authors = ["Andrew Danger Lyon <andrew@killtheradio.net>"]
edition = "2021"

[dependencies]
argon2 = "0.3"
base64 = "0.13"
blake2 = "0.10"
chacha20poly1305 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
crypto_box = "0.7"
ed25519-consensus = "2.0"
getset = "0.1"
glob = "0.3"
rand = { version = "0.8", features = ["getrandom"] }
rand_chacha = "0.2"
rasn = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
url = { version = "2.2", features = ["serde"] }
zeroize = { version = "1.3", features = ["zeroize_derive" ] }

